--- a/Makefile.hcos
+++ b/Makefile.hcos
@@ -21,7 +21,7 @@ CONFIG =-Dint64_t="long long" \
 	-DIPERF_VERSION=3 \
 	-DTCP_MAXSEG=2 \
 	-DCLOCKS_PER_SEC=PLT_HZ \
-	-D_PACKAGE_STRING=hyperc_lwip \
+	-DPACKAGE_STRING="\"hyperc_lwip\"" \
 	-Dselect=lwip_select \
 	-Dsrandom=srand \
 	-Drandom=rand
